# qa_with_docs

./: README.md  docs.index  dummy.py  faiss_store.pkl  ingest.py  pyproject.toml
