[tool.poetry]
name = "qa-with-docs"
version = "0.1.0"
description = ""
authors = ["Ambuj Pawar <pawar.ambuj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
langchain = "^0.0.129"
faiss-cpu = "^1.7.3"
loguru = "^0.6.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
